[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/item/assets/question_mark.png" type="Texture" id=1]
[ext_resource path="res://scenes/forest/assets/forest_extended.png" type="Texture" id=2]
[ext_resource path="res://entities/item/assets/ex_mark.png" type="Texture" id=3]
[ext_resource path="res://entities/item/BossGate.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "exclaim",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "question",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.5, 76 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 76 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "closing"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -108 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -108 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "opening"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.999999 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -108 ) ]
}

[node name="BossGate" type="StaticBody2D"]
collision_layer = 25
collision_mask = 25
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.76837e-07, 2 )
scale = Vector2( 1.375, 4.75 )
texture = ExtResource( 2 )
hframes = 10
vframes = 6
frame = 48

[node name="Prompt" type="AnimatedSprite" parent="."]
position = Vector2( -31, -29 )
frames = SubResource( 1 )
animation = "question"

[node name="Locked_Prompt" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Locked_Prompt"]
position = Vector2( 16.5, 2 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/closed = SubResource( 7 )
anims/closing = SubResource( 5 )
anims/open = SubResource( 8 )
anims/opening = SubResource( 6 )

[connection signal="body_entered" from="Locked_Prompt" to="." method="_on_Locked_Prompt_body_entered"]
[connection signal="body_exited" from="Locked_Prompt" to="." method="_on_Locked_Prompt_body_exited"]
